--- a/api/composer.json
+++ b/api/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "slim/slim": "3.*",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "phpmailer/phpmailer": "^6.8"
     },
     "autoload": {
         "psr-4": {
